--- a/templates/success.html
+++ b/templates/success.html
@@ -13,11 +13,12 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <h1>Objects in the video has been detected</h1>
-        <video width="852" height="480" controls>
+        <h1>Objects in the image has been detected</h1>
+        <!-- <video width="852" height="480" controls>
             <source src="{{ url_for('static', filename='tiny.webm') }}" type="video/webm">
             Your browser does not support the video tag.
-          </video>
+          </video> -->
+          <img src="1.jpg" alt="Girl in a jacket" width="500" height="600">
     </video> 
     </body>
 </html>
