--- a/templates/success.html
+++ b/templates/success.html
@@ -18,7 +18,8 @@
             <source src="{{ url_for('static', filename='tiny.webm') }}" type="video/webm">
             Your browser does not support the video tag.
           </video> -->
-          <img src="1.jpg" alt="Girl in a jacket" width="500" height="600">
-    </video> 
+          
+    </video>
+    <img src="{{ url_for('static', filename='/exp/1.jpg') }}" />
     </body>
 </html>
